[package]
name = "kallman"
version = "0.1.0"
edition = "2021"
authors = ["Dragomir Lekovic <dragolekovic@gmail.com>"]
repository = "https://github.com/dragomir003/kallman.git"
homepage = "https://github.com/dragomir003/kallman.git"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
num-traits = "0.2.16"

[dev-dependencies]
assert_approx_eq = "1.1.0"
